--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
-
 .idea/sapui5_twitter.iml
 .idea/modules.xml
 l
 .idea/workspace.xml
 .idea/inspectionProfiles/Project_Default.xml
 ftpsync.settings
+UIAdaptation_index.html
+changes_preview.js
+sap-ui-cachebuster-info.json
+extended_runnable_file.html
+.*/extended_runnable_file.html
+mock_preview_sapui5.html
+.*/mock_preview_sapui5.html
+fioriHtmlRunner.html
+.*/fioriHtmlRunner.html
+visual_ext_index.html
+/webapp/visual_ext_index.html
